Sync all content

--- a/content/resources/30.md
+++ b/content/resources/30.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: 97d98dd7-5841-4cf6-1641-0aa5685094cc
 resourcetype: Image
 title: 30 students enrolled
 uid: 5126cd15-2c4e-1a72-5c12-6b7d643d23f9
