--- a/content/resources/35-310-2.md
+++ b/content/resources/35-310-2.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: 97d98dd7-5841-4cf6-1641-0aa5685094cc
 resourcetype: Image
 title: CMS.301 classoom
 uid: 47b3ab4e-4afb-0e7b-8aa2-d1477c8aeace
