--- a/content/resources/35-3102.md
+++ b/content/resources/35-3102.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: 97d98dd7-5841-4cf6-1641-0aa5685094cc
 resourcetype: Image
 title: CMS.301 classroom
 uid: c623d834-4715-9150-e4a4-790e1fd71941
